Set the maximum width of the subscribe button to 450px to avoid it getting too wide

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -147,6 +147,7 @@
 
       .emailColumn {
         align-self: center;
+        max-width: 450px;
         .form {
           display: flex;
           margin-bottom: 4px;
